# Decart-Preacher

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
decard_preacher/: main.py
src/: main.py
test/: test_decimal.py  test_fractions.py  test_simple_numbers.py  test_sqrt.py
